tests/parser/parse-for.3.bad.error
error: Malformed for expression
  --> test:4:19
   |
 4 |  (define f (for x y))
   |                    ^ expected in
